fixed overflow issue

--- a/src/components/StudentProfileCard/StudentProfileCard.module.css
+++ b/src/components/StudentProfileCard/StudentProfileCard.module.css
@@ -37,7 +37,7 @@
   min-height: 120px;  /* Minsta bredd för att garantera att bilden visas ordentligt */
   max-width: 50%;
   height: 100%;
-  max-height: 180px;
+  max-height: 200px;
   overflow: hidden;
   
   border-radius: 0.875rem;
@@ -114,31 +114,13 @@
 
 
 /* Responsive adjustments */
-@media (min-width: 768px) {
-  /* .cardContent {
-    flex-direction: row;
-    align-items: flex-start;
-  } */
-  
+@media (max-width: 1080px) {
+ 
   .imageContainer {
-    /* width: 10.125rem;
-    height: 12.625rem; */
-    max-width: 50%;
-    flex-shrink: 0;
-  }
 
-  .imageContainer {
-    flex: 1;  /* Tar upp halva utrymmet */
-    min-width: 120px;
-    min-height: 120px;  /* Minsta bredd för att garantera att bilden visas ordentligt */
-    max-width: 50%;
-    height: 100%;
-    
-    overflow: hidden;
-    
-    border-radius: 0.875rem;
-    background-color: antiquewhite;   /* Maximal bredd 50% */
+    max-height: 180px;
   }
+ 
   
  
 }
